--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -1,14 +1,16 @@
 doctype html
-html(lang='en')
+html(lang="en")
   head
-    meta(charset='utf-8')
-    title #{title}
-    meta(name="description", content=description)
-    block head
-
-  body(class=pageClass)
-    section
-    .container
-      +item('item title', 'item descr')
-      +item('item title', 'item descr')
-      +item('item title', 'item descr')
+    title HelloWorld
+    script(type='text/javascript'). 
+      if(foo) bar(1 + 5)
+  body
+    h1 Pug - node template engine
+    #container.col
+      if youAreUsingPug
+        p You are amazing
+      else
+        p Get on it!
+      p.
+        Pug is a terse and simple templating language with a
+        strong focus on performance and powerful features.
