--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
     script(type='text/javascript').
       if(foo) bar(1 + 5)
   body
-    h1 Pug - node template engine
+    h1 Pug - node template engine!!!!
     #container.col
       if youAreUsingPug
         p You are amazing
