--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,11 @@
 p {
   color: red;
 }
+
+.square {
+  width: 70px;
+  height: 70px;
+  background: #1F2041;
+  border-radius: 6px;
+  margin-bottom: 20px;
+}
