--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -5,12 +5,15 @@ html(lang="en")
     script(type='text/javascript').
       if(foo) bar(1 + 5)
   body
-    h1 Pug - node template engine!!!!
-    #container.col
-      if youAreUsingPug
-        p You are amazing
-      else
-        p Get on it!
-      p.
-        Pug is a terse and simple templating language with a
-        strong focus on performance and powerful features.
+    .container
+      .square
+      .text Dark Shade 100% #1F2041
+
+    .container
+      .square
+      .text Dark Shade 100% #1F2041
+
+    .container
+      .square
+      .text Dark Shade 100% #1F2041
+    
