Scss and begin first page UI kit

--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -2,18 +2,17 @@ doctype html
 html(lang="en")
   head
     title HelloWorld
-    script(type='text/javascript').
-      if(foo) bar(1 + 5)
   body
-    .container
-      .square
-      .text Dark Shade 100% #1F2041
+    .colors-and-type
+      .container
+        .square
+        .text Dark Shade 100% #1F2041
 
-    .container
-      .square
-      .text Dark Shade 100% #1F2041
+      .container
+        .square
+        .text Dark Shade 100% #1F2041
 
-    .container
-      .square
-      .text Dark Shade 100% #1F2041
+      .container
+        .square
+        .text Dark Shade 100% #1F2041
     
