--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,11 +1,31 @@
-$body-color: rgb(179, 179, 179);
+$body-color: rgb(209, 209, 209);
 
 body {
   background-color: $body-color;
+  margin: 0;
+  padding: 0;
+}
+
+.UIkit-page {
+  margin: 30px auto 0 auto;
+
 }
 
 .colors-and-type {
+  position: relative;
   width: 1440px;
   height: 900px;
   background-color: white;
+  &::before {
+    content: 'Colors & type';
+    position: absolute;
+    top: -20px;
+  }
+}
+
+.colors {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 20px;
 }
