Add logo for UIkit

--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -5,6 +5,8 @@ html(lang="en")
   body
     .colors-and-type.UIkit-page
 
+      img.logo(src='./src/logo.svg')
+
       mixin list-item(tone, colorName, colorHex)
         li.colors-list__item
           .colors-list__square(class=tone)
