PerfectPixel block(Colors & type) modified

--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -6,34 +6,34 @@ html(lang="en")
     .colors-and-type.UIkit-page.flexible
       img.logo(src='./src/logo.svg')
 
-      mixin list-item(tone, colorName, colorHex)
+      mixin colors-item(tone, colorName, colorHex)
         li.colors-list__item
           .colors-list__square(class=tone)
           .colors-list__text!= colorName + '<br>' + colorHex
 
       ul.colors-list
-        +list-item('colors-list__square_tone_dark100','Dark Shade 100%', '#1F2041')
-        +list-item('colors-list__square_tone_dark75','Dark Shade 75%', '#1F2041')
-        +list-item('colors-list__square_tone_dark50','Dark Shade 50%', '#1F2041')
-        +list-item('colors-list__square_tone_dark25','Dark Shade 25%', '#1F2041')
-        +list-item('colors-list__square_tone_dark5','Dark Shade 5%', '#1F2041')
-        +list-item('colors-list__square_tone_purple','Purple', '#BC9CFF')
-        +list-item('colors-list__square_tone_green','Green', '#6FCF97')
+        +colors-item('colors-list__square_tone_dark100','Dark Shade 100%', '#1F2041')
+        +colors-item('colors-list__square_tone_dark75','Dark Shade 75%', '#1F2041')
+        +colors-item('colors-list__square_tone_dark50','Dark Shade 50%', '#1F2041')
+        +colors-item('colors-list__square_tone_dark25','Dark Shade 25%', '#1F2041')
+        +colors-item('colors-list__square_tone_dark5','Dark Shade 5%', '#1F2041')
+        +colors-item('colors-list__square_tone_purple','Purple', '#BC9CFF')
+        +colors-item('colors-list__square_tone_green','Green', '#6FCF97')
 
-      ul.colors-list
-        li.colors-list__item 
-          .colors-list__square
-          .colors-list__text This one is the sub-section or widget title
-        li.colors-list__item 
-          .colors-list__square
-          .colors-list__text Next one is the item title inside widgets
-        li.colors-list__item
-          .colors-list__square
-          .colors-list__text This is a label or CTA text
-        li.colors-list__item
-          .colors-list__square
-          .colors-list__text This is the body text which is used for<br> most of the design, like paragraphs, lists, etc.
-    
+      mixin type-item(size, tag, description)
+        li.type-list__item
+          .type-list__square(class=size)= tag
+          .type-list__text(class=size)= description
+
+      ul.type-list
+        +type-item('type-list__text_size_h1', 'H1', 'This one is the sub-section or widget title')
+        +type-item('type-list__text_size_h2', 'H2', 'Next one is the item title inside widgets')
+        +type-item('high', 'H3', 'This is a label or CTA text')
+        +type-item('type-list__text_size_body', 'Body', 'This is the body text which is used for most of the design, like paragraphs, lists, etc.')
+      
+
+
+
     .form-elements.UIkit-page
       img.logo(src='./src/logo.svg')
 
