--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -18,8 +18,6 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-content: space-around;
-  justify-content: center;
 }
 
 .colors-and-type {
@@ -27,16 +25,6 @@ body {
   background-color: white;
   &::before {
     content: 'Colors & type';
-    position: absolute;
-    top: -20px;
-  }
-}
-
-.form-elements {
-  height: 1853px;
-  background-color: white;
-  &::before {
-    content: 'Form Elements';
     position: absolute;
     top: -20px;
   }
@@ -51,22 +39,39 @@ body {
 .colors-list {
   margin: 0;
   padding: 0;
+  margin-top: 145px;
+  margin-left: 150px;
+  margin-right: auto;
+}
+
+.type-list {
+  margin: 0;
+  padding: 0;
+  margin-top: 145px;
+  margin-left: auto;
+  margin-right: 191px;
 }
 
 .colors-list__item {
   min-width: 320px;
   list-style: none;
   display: flex;
-  align-items: center;
   justify-content: flex-start;
-  font-size: 19px;
-  line-height: 29px;
-  font-style: normal;
-  font-weight: bold;
+  align-items: center;
   margin-bottom: 20px;
   &:last-child {
     margin-bottom: 0;
   }
+}
+
+.type-list__item {
+  min-width: 320px;
+  max-width: 403px;
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-bottom: 50px;
 }
 
 .colors-list__square {
@@ -74,39 +79,83 @@ body {
   height: 70px;
   border-radius: 6px; 
 }
-
 .colors-list__square_tone_dark100 {
   background: $square-color;
 }
-
 .colors-list__square_tone_dark75 {
   background: rgba($square-color, 0.75);
 }
-
 .colors-list__square_tone_dark50 {
   background: rgba($square-color, 0.50);
 }
-
 .colors-list__square_tone_dark25 {
   background: rgba($square-color, 0.25);
 }
-
 .colors-list__square_tone_dark5 {
   background: rgba($square-color, 0.05);
 }
-
 .colors-list__square_tone_purple {
   background: #BC9CFF;
 }
-
 .colors-list__square_tone_green {
   background: #6FCF97;
 }
 
+.type-list__square {
+  width: 29px;
+  height: 30px;
+  font-style: normal;
+  font-weight: normal;
+  text-align: right;
+}
+
+
 .colors-list__text {
+  font-size: 19px;
+  line-height: 29px;
+  font-style: normal;
+  font-weight: bold;
   margin-left: 40px;
 }
 
+.type-list__text {
+  font-style: normal;
+  font-weight: bold;
+  margin-left: 30px;
+}
+
+.type-list__text_size_h1 {
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.type-list__text_size_h2 {
+  font-size: 19px;
+  line-height: 24px;
+  max-width: 282px;
+}
+
+.type-list__text_size_h3 {
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.type-list__text_size_body {
+  font-size: 14px;
+  line-height: 24px;
+  max-width: 301px;
+}
+
+
+.form-elements {
+  height: 1853px;
+  background-color: white;
+  &::before {
+    content: 'Form Elements';
+    position: absolute;
+    top: -20px;
+  }
+}
 
 .input {
   width: 320px;
