--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -38,4 +38,7 @@ html(lang="en")
       img.logo(src='./src/logo.svg')
 
       input(type='text' class='input')
+      input(type='text' class='input')
+      input(type='text' class='input')
+      input(type='text' class='input')
   
