--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,26 @@
+@font-face {
+  font-family: 'Quicksand';
+  src:  url('../../fonts/Quicksand-Regular.ttf') format('truetype');
+  font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  src:  url('../../fonts/Quicksand-Bold.ttf') format('truetype');
+  font-weight: bold;
+	font-style: normal;
+}
+
 $body-color: rgb(224, 224, 224);
-$square-color: #1F2041;
-$square-color1: opacify($square-color, 0.75);
+
+$dark-100: #1F2041;
+$dark-75: rgba($dark-100, 0.75);
+$dark-50: rgba($dark-100, 0.50);
+$dark-25: rgba($dark-100, 0.25);
+$dark-5: rgba($dark-100, 0.05);
+$purple: #BC9CFF;
+$green: #6FCF97;
 
 body {
   background-color: $body-color;
@@ -80,25 +100,25 @@ body {
   border-radius: 6px; 
 }
 .colors-list__square_tone_dark100 {
-  background: $square-color;
+  background: $dark-100;
 }
 .colors-list__square_tone_dark75 {
-  background: rgba($square-color, 0.75);
+  background: $dark-75;
 }
 .colors-list__square_tone_dark50 {
-  background: rgba($square-color, 0.50);
+  background: $dark-50;
 }
 .colors-list__square_tone_dark25 {
-  background: rgba($square-color, 0.25);
+  background: $dark-25;
 }
 .colors-list__square_tone_dark5 {
-  background: rgba($square-color, 0.05);
+  background: $dark-5;
 }
 .colors-list__square_tone_purple {
-  background: #BC9CFF;
+  background: $purple;
 }
 .colors-list__square_tone_green {
-  background: #6FCF97;
+  background: $green;
 }
 
 .type-list__square {
@@ -119,6 +139,7 @@ body {
 }
 
 .type-list__text {
+  font-family: 'Quicksand', 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: bold;
   margin-left: 30px;
