--- a/src/assets/scss/font.scss
+++ b/src/assets/scss/font.scss
@@ -11,3 +11,17 @@
   font-weight: bold;
 	font-style: normal;
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  src:  url('../fonts/Montserrat-Regular.ttf') format('truetype');
+  font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src:  url('../fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: bold;
+	font-style: normal;
+}
