Add jquery and jquery ui

--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -70,4 +70,6 @@ html(lang="en")
       
       +advantage-item('./src/advantage-emoticon.svg', 'Комфорт', 'Шумопоглощающие стены')
       +advantage-item('./src/advantage-city.svg', 'Удобство', 'Окно в каждой из спален')
+
+      #wnd.test ПРивет
   
