Add header in UIkit

--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -82,4 +82,19 @@ html(lang="en")
         option Fast
         option Faster
 
-  
+    //- form-elements page ----------------------------------------------------------
+    .headers-and-footers.UIkit-page
+      header.header
+        .header__logo
+        .header__nav
+          ul.header__nav-items
+            li Home
+            li About Us
+            li Services
+            li Careers
+            li News
+            li Documentation
+        .header__login
+          a(href='#') Login
+          a(href='#') Register
+          
