--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -258,3 +258,48 @@ input {
 .advantage__title {
   font-weight: bold;
 }
+
+
+
+
+
+.headers-and-footers {
+  height: 1350px;
+  background-color: white;
+  &::before {
+    content: 'Headers & Footers';
+    position: absolute;
+    top: -20px;
+  }
+}
+
+.header {
+	display: flex;
+	outline: 1px solid grey;
+	justify-content: space-around;
+  align-items: center;
+  height: 70px;
+}
+
+.header__logo {
+  height: 40px;
+  width: 106px;
+  background-image:
+    url('../../Logo-grad.svg');
+}
+
+.header__nav-items {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	display: flex;
+}
+
+.header__login a {
+	display: inline-block;
+	text-decoration: none;
+	border: 2px solid blue;
+	border-radius: 10px;
+	color: black;
+	padding: 5px;
+}
