--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -95,6 +95,8 @@ html(lang="en")
             li News
             li Documentation
         .header__login
-          a(href='#') Login
-          a(href='#') Register
-          
+          button(type='button').btn
+            .btn__text.btn_fill_white Login
+          button(type='button').btn
+            .btn__text.btn_fill_color Register
+            
