--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title UIkit
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
     .colors-and-type.UIkit-page.flexible
       img.logo(src='./src/logo.svg')
@@ -85,12 +86,12 @@ html(lang="en")
     //- form-elements page ----------------------------------------------------------
     .headers-and-footers.UIkit-page
       header.header
-        .header__logo
-        .header__nav
-          ul.header__nav-items
+        .header__logo.logo
+        .header__nav.nav
+          ul.nav__items
             li Home
             li About Us
-            li Services
+            li.nav__items-drop Services
             li Careers
             li News
             li Documentation
