--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -285,7 +285,7 @@ input {
 	margin: auto;
 }
 
-.logo {
+.header__logo {
 	width: 110px;
 	height: 40px;
 	background: url('../../Logo-grad.svg') no-repeat 50% 50%;
@@ -358,4 +358,39 @@ input {
 .btn_fill_color {
 	color: #ffffff;
 	background-color: transparent;
+}
+
+
+
+.header {
+	margin-bottom: 20px;
+}
+
+.footer {
+	outline: 1px solid grey;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+  max-width: 1440px;
+  height: 372px;
+	margin: auto;
+	border-bottom: 2px solid grey;
+}
+
+.nav-items {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.footer__nav {
+	align-self: flex-start; 
+}
+
+.about {
+	max-width: 220px;
+}
+
+.subscribe {
+	max-width: 220px;
 }
