--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,6 +1,6 @@
 html(lang="en")
   head
-    title UIkit
+    title Landing page
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
     //- form-elements page ----------------------------------------------------------
