Correct footer layout (PerfectPixel)

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -21,7 +21,7 @@ footer.footer
   
   block subscribe
     .subscribe
-      h3 Подписка
+      h3.subscribe__title Подписка
       p Получайте специальные предложения и новости сервиса
       input(type='text' name='email')
 
@@ -29,7 +29,8 @@ footer.footer
     .copyright
       .copyright__text Copyright © 2018 Toxin отель. Все права зачищены.
       .social-bar
-        a(href='#') twitter
+        a(href='#')
+          i(class="fab fa-twitter" alt='twitter')
         a(href='#') facebook
         a(href='#') instagram
       
