--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title Landing page
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    script(src="https://kit.fontawesome.com/5668038b6c.js" crossorigin="anonymous")
   body
     //- form-elements page ----------------------------------------------------------
     include ../components/header/header.pug
