--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,12 +1,11 @@
 .footer {
 	display: grid;
-  grid-template-columns: 3.5fr 5fr 3.5fr;
-  grid-template-rows: 100px 172px 100px 70px;
-  grid-template-areas: 
-    ". . ."
-    "a r s"
-    ". . ."
-    "c c c";
+  grid-template-columns: auto 260px 640px 260px auto;
+  grid-template-rows: 372px 70px;
+  grid-template-areas:
+    ". a r s ."
+    ". c c c .";
+  grid-gap: 1px 0;
   max-width: 1440px;
   height: 442px;
   margin: 0 auto;
@@ -14,22 +13,39 @@
 }
 
 .about {
-  max-width: 220px;
+  max-width: 260px;
   grid-area: a;
+  margin: 0;
+  margin-top: 100px;
+  .header__logo {
+    margin-bottom: 17px;
+  }
 }
 
 .relation {
   grid-area: r;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  margin: 0;
+  margin-top: 92px;
 }
 
 .relation__list {
+  &:nth-child(1) {
+    margin-left: 40px;
+  }
+  &:nth-child(2) {
+    margin-left: 57px;
+  }
+  &:nth-child(3) {
+    margin-left: 93px;
+  }
 }
 
 .relation__title {
   text-transform: uppercase;
   font-weight: bold;
+  margin-bottom: 21px;
 }
 
 .relation__items {
@@ -39,6 +55,11 @@
 }
 
 .relation__item {
+  margin-bottom: 21px;
+  line-height: 17px;
+  &:last-child {
+    margin-bottom: 0;
+  }
   a {
     text-decoration: none;
   }
@@ -46,11 +67,25 @@
 
 .subscribe {
   grid-area: s;
-	max-width: 220px;
+  max-width: 260px;
+  margin-top: 92px;
+  &__title {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 18px;
+  }
+  p {
+    margin: 0;
+  }
+  input {
+    max-width: 260px;
+    margin-top: 22px;
+  }
 }
 
 .copyright {
   grid-area: c;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
