Add social icon bar in footer

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -30,7 +30,9 @@ footer.footer
       .copyright__text Copyright © 2018 Toxin отель. Все права зачищены.
       .social-bar
         a(href='#')
-          i(class="fab fa-twitter" alt='twitter')
-        a(href='#') facebook
-        a(href='#') instagram
+          span(title='twitter').twitter.icon
+        a(href='#')
+          span(title='facebook').facebook.icon
+        a(href='#')
+          span(title='instagram').instagram.icon
       
