--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -174,11 +174,11 @@
   }
 }
 
-label {
+.form-elements label {
   display: block;
 }
 
-input {
+.form-elements input {
   width: 320px;
   height: 44px;
   background: #FFFFFF;
@@ -322,4 +322,69 @@ input {
   background-size: cover;
   margin: 0 auto;
   max-width: 1440px;
+}
+
+.search-rooms-form {
+  margin-top: 70px;
+  margin-left: 140px;
+  width: 380px;
+  height: 374px;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-title {
+  max-width: 320px;
+}
+
+.full-form-1 {
+  width: 320px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.drop-icon {
+  display: block;
+  position: relative;
+}
+
+.drop-icon::before {
+  position: absolute;
+  right: 10px;
+  top: 34px;
+  display: inline-block;
+  font-family: 'Material Icons';
+  content: 'expand_more';
+  font-size: 24px;
+  color: rgba(31, 32, 65, 0.5);
+}
+
+.half-form input {
+  width: 150px;
+  height: 44px;
+}
+
+.full-form {
+
+}
+
+.full-form input {
+  height: 44px;
+  min-width: 320px;
+}
+
+.search-rooms-form input {
+  margin: 0;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  border-radius: 4px;
+  padding: 13px 15px 13px 15px;
+  box-sizing: border-box;
+  background: #FFFFFF;
 }
