--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,6 +7,26 @@ html(lang="en")
   body
     //- form-elements page ----------------------------------------------------------
     include ../components/header/header.pug
+    
     .content
+      form(action='' method='post' class="search-rooms-form")
+        h2.form-title Найдем номера под ваши пожелания
+        
+        .full-form-1
+          .half-form
+            label(for="coming" class='drop-icon') Прибытие
+            input(id="coming" type="text" name="date of coming")
+
+          .half-form
+            label(for="leaving" class='drop-icon') Выезд
+            input(id="leaving" type="text" name="date leaving")
+        
+        .full-form
+          label(for="guests" class='drop-icon') Гости
+          input(id="guests" type="text" name="guests count")
+
+        button(type="submit" class="btn")
+          div(class="btn__text btn_fill_color") Подобрать номер
+        
     include ../components/footer/footer.pug
             
