Add slideshow room-frame block
new components/room-frame:
- room-frame.pug
- room-frame.scss
- slideshow.js

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
     include ../components/header/header.pug
     
     .content
-      form(action='' method='post' class="search-rooms-form")
+      form(action="/search-room.html" method="get" class="search-rooms-form")
         h2.form-title Найдем номера под ваши пожелания
         
         .full-form-1
