--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -388,3 +388,42 @@
   box-sizing: border-box;
   background: #FFFFFF;
 }
+
+
+.filter-room {
+  display: grid;
+  grid-template-columns: auto 320px 840px auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    ". f r .";
+  grid-gap: 1px 0;
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.filter-room__filter {
+  grid-area: f;
+  label {
+    display: block;
+  }
+}
+
+.filter-room__result {
+  grid-area: r;
+}
+
+.layout-room-box {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.room-box {
+  width: 270px;
+  height: 240px;
+  margin-bottom: 40px;
+  margin-right: 15px;
+  &:nth-of-type(3n) {
+    margin-right: 0;
+  }
+}
