--- a/src/components/room-frame/room-frame.scss
+++ b/src/components/room-frame/room-frame.scss
@@ -70,3 +70,13 @@
 .active, .dot:hover {
   background-color: #FFFFFF;
 }
+
+.room-box {
+  width: 270px;
+  height: 240px;
+  margin-bottom: 40px;
+  margin-right: 15px;
+  &:nth-of-type(3n) {
+    margin-right: 0;
+  }
+}
