--- a/src/pages/search-room.pug
+++ b/src/pages/search-room.pug
@@ -1,3 +1,93 @@
+include ../components/room-frame/room-frame.pug
+- 
+  var data = [{
+    number: 888,
+    price: 9990,
+    rating: 5,
+    reviews: 145,
+    image: ['./src/components/room-frame/image/888/image-min.png', 
+            './src/components/room-frame/image/888/image-2.png',
+            './src/components/room-frame/image/888/image-3.png']
+  },
+  {
+    number: 840,
+    price: 9900,
+    rating: 4,
+    reviews: 65,
+    image: ['./src/components/room-frame/image/840.jpg']
+  },
+  {
+    number: 980,
+    price: 8500,
+    rating: 3,
+    reviews: 35,
+    image: ['./src/components/room-frame/image/980.jpg']
+  },
+  {
+    number: 856,
+    price: 7300,
+    rating: 5,
+    reviews: 19,
+    image: ['./src/components/room-frame/image/856.jpg']
+  },
+  {
+    number: 740,
+    price: 6000,
+    rating: 4,
+    reviews: 44,
+    image: ['./src/components/room-frame/image/740.jpg']
+  },
+  {
+    number: 982,
+    price: 5800,
+    rating: 3,
+    reviews: 56,
+    image: ['./src/components/room-frame/image/982.jpg']
+  },
+  {
+    number: 678,
+    price: 5500,
+    rating: 5,
+    reviews: 45,
+    image: ['./src/components/room-frame/image/678.jpg']
+  },
+  {
+    number: 450,
+    price: 5300,
+    rating: 4,
+    reviews: 39,
+    image: ['./src/components/room-frame/image/450.jpg']
+  },
+  {
+    number: 350,
+    price: 5000,
+    rating: 3,
+    reviews: 77,
+    image: ['./src/components/room-frame/image/350.jpg']
+  },
+  {
+    number: 666,
+    price: 5000,
+    rating: 5,
+    reviews: 25,
+    image: ['./src/components/room-frame/image/666.jpg']
+  },
+  {
+    number: 444,
+    price: 5000,
+    rating: 3,
+    reviews: 15,
+    image: ['./src/components/room-frame/image/444.jpg']
+  },
+  {
+    number: 352,
+    price: 5000,
+    rating: 3,
+    reviews: 55,
+    image: ['./src/components/room-frame/image/352.jpg']
+  }]
+
+
 doctype html
 html(lang="en")
   head
@@ -16,23 +106,10 @@ html(lang="en")
         input(id="guests")
       .filter-room__result
         h2 Номера, которые мы для вас подобрали
+        
         .layout-room-box
-          .room-box
-            include ../components/room-frame/room-frame.pug
-          .room-box
-            include ../components/room-frame/room-frame.pug
-          .room-box
-            include ../components/room-frame/room-frame.pug
-          .room-box
-            include ../components/room-frame/room-frame.pug
-          .room-box
-          .room-box
-          .room-box
-          .room-box
-          .room-box
-          .room-box
-          .room-box
-          .room-box
-
+          each room in data
+            +room-frame(room)
+ 
     include ../components/footer/footer.pug
             
