--- a/src/components/room-frame/room-frame.scss
+++ b/src/components/room-frame/room-frame.scss
@@ -80,3 +80,19 @@
     margin-right: 0;
   }
 }
+
+.price,
+.reviews {
+  color: rgba(31, 32, 65, 0.5);
+}
+
+.number {
+  min-width: 100px;
+}
+
+.frame-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
